welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:22: error: not found: value reculer
								reculer();
                                                                ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
								if(message="Y"){
                                                                          ^BDRBuggle:25: error: not found: value reculer
									reculer();reculer();
                                                                        ^BDRBuggle:25: error: not found: value reculer
									reculer();reculer();
                                                                                  ^BDRBuggle:28: error: not found: value reculer
										reculer();reculer();reculer();
                                                                                ^BDRBuggle:28: error: not found: value reculer
										reculer();reculer();reculer();
                                                                                          ^BDRBuggle:28: error: not found: value reculer
										reculer();reculer();reculer();
                                                                                                    ^