welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()){
	var message = litMessage();
if(message=="R"){
	droite();avance();
	}else {
		if(message == "L"){
			gauche();avance();
		}else {
			if(message == "I"){
				gauche();gauche();avance();
			}else {
				if(message =="A"){
					avance();
				}else{
					if(message=="B"){
						avance();avance();
					}else{
						if(message == "C"){
							avance();avance();avance();
						}else {
							if(message =="Z"){
								reculer();
							}else {
								if(message="Y"){
									reculer();reculer();
								}else {
									if(message == "X"){
										reculer();reculer();reculer();
									}
								}
							}
						}
					}
				}
		}
	}
}
}
